@@ -59,7 +59,7 @@ public class TablesDataSource extends JRAbstractBeanDataSource
 		if( field.getName().equals( "table" ) )
 			return new LTableDataSource( tables[cnt] );
 		if( field.getName().equals( "column_count" ) )
-			return new Integer( tables[cnt].getColumnCount() );
+			return Integer.valueOf( tables[cnt].getColumnCount() );
 		if( field.getName().equals( "print_tables" ) )
 		{
 			// logger.debug("pt: " + (tables[cnt].getRowCount() > 0));
